<resources>
    <string name="app_name">SoloPlayer</string>

    <string name="splash_screen_title">Power media player</string>

    <string name="tab_audio">Audio</string>
    <string name="tab_video">Video</string>
    <string name="tab_files">Files</string>
    <string name="tab_folders">Folders</string>

    <string name="search_hint">Search files</string>

    <string name="empty_audio_file_artist">no artist</string>
    <string name="empty_audio_file_title">no title</string>
    <string name="empty_audio_file_album">no album</string>
    <string name="empty_audio_file_genre">no genre</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="scan_notification_title">Wait!</string>
    <string name="scan_notification_message">Searching in progress...</string>

    <string name="drawer_item_about">About</string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_effects">Effects</string>
    <string name="drawer_item_playlist">Playlist</string>
    <string name="drawer_item_wear">Wear</string>

    <string name="infinity_symbol">∞</string>

    <string name="dialog_ok">Yes</string>
    <string name="dialog_cancel">No</string>

    <string name="dialog_add_folder_title">New folder are detected!</string>
    <string name="dialog_add_audio_folder">Do you want add audio folder to list?</string>
    <string name="dialog_add_video_folder">Do you want add video folder to list?</string>

    <string name="dialog_search_title">Search</string>
    <string name="dialog_search_message">Do you want to start searching for files?</string>

    <string name="dialog_permission_title">Permissions are required</string>
    <string name="dialog_permission_message">Please turn on this permissions for using the application</string>

    <string name="playback_control_folder_not_selected">Folder is not selected</string>
    <string name="playback_control_track_not_selected">File is not selected</string>

    <string name="toast_media_scanning">Scan is already working!</string>
    <string name="toast_audio_folder_not_exists">Audio folder does not exist</string>
    <string name="toast_video_folder_not_exists">Video folder does not exist</string>
    <string name="toast_audio_file_not_exists">Audio file does not exist</string>
    <string name="toast_video_file_not_exists">Video file does not exist</string>
    <string name="toast_video_file_deleted">Video file has been deleted</string>
    <string name="toast_audio_file_deleted">Audio file has been deleted</string>
    <string name="toast_video_file_not_deleted">Video file is not deleted</string>
    <string name="toast_audio_file_not_deleted">Audio file is not deleted</string>
    <string name="toast_audio_file_added_playlist">Audio file has been added to playlist</string>
    <string name="toast_video_file_added_playlist">Video file has been added to playlist</string>
    <string name="toast_video_file_deleted_playlist">Media file has been deleted from playlist</string>
    <string name="toast_permissions_denied_message">Please turn on permissions in the application settings for using this app!</string>

    <string name="empty_playlist">Playlist is empty</string>

    <string name="repeat_button_on">On</string>
    <string name="repeat_button_off">Off</string>
    <string name="repeat_loop_off">n/a</string>

    <string name="effect_tempo_name">Tempo</string>
    <string name="effect_pitch_shift_name">Pitch shift</string>

    <string name="hint_empty_folders_text">The folders were not found</string>
    <string name="hint_empty_folders_button">Scan</string>

    <string name="settings_view_title">View</string>
    <string name="settings_view_enable_app_guide">Enable app guide</string>
    <string name="settings_media_title">Media</string>
    <string name="settings_play_music">Play music when headphone plugged</string>
    <string name="settings_background_audio">Play audio in background</string>
    <string name="settings_files_title">Files</string>
    <string name="settings_hidden_files_text">Show hidden files</string>

</resources>
